--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,101 @@
+.Launcher.Fixed {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  margin: 1.5rem;
+}
+
+.Launcher.Container {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+
+.Launcher.LaunchButton {
+  background: white;
+  border: none;
+  border-radius: 50%;
+  height: 3rem;
+  width: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.45);
+}
+
+.Launcher.LaunchButton:hover {
+  cursor: pointer;
+}
+
+.Window.Fixed {
+  position: fixed;
+  bottom: 0.75rem;
+  right: 88px;
+}
+
+.AddressInfo.Container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.AddressInfo.MainText {
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1;
+  padding-bottom: 4px;
+  color: black;
+}
+
+.AddressInfo.SubText {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1;
+}
+
+.AddressInfo.DropDownItem {
+  color: black;
+  cursor: pointer;
+  font-size: 14px;
+  text-decoration: none;
+  border-bottom: 1px solid #eeeeee;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  padding: 15px;
+}
+
+.AddressInfo.DropDownItem:hover {
+  background-color: #eeeeee;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.AddressInfo.LiLink {
+  color: black;
+  text-decoration: none;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 600;
+  gap: 8px;
+}
+
+.ConversationList.List {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  padding: 0;
+  margin: 0;
+}
+
 .ConversationListItem.ListItem {
   display: flex;
   align-items: center;
@@ -13,4 +111,314 @@
 .ConversationListItem.ListItem:hover {
   background-color: #eeeeee;
   transition: background-color 300ms ease-in-out;
+}
+
+.ConversationListItem.TextContainer {
+  color: black;
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.ConversationListItem.Title {
+  color: black;
+  font-weight: bold;
+  text-align: start;
+}
+
+.ConversationListItem.Subtitle {
+  color: black;
+  max-width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: start;
+  padding: 2px 0px;
+}
+
+.ConversationList.Subtitle {
+  color: black;
+  max-width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: start;
+  padding: 2px 0px;
+}
+
+.Header.HeaderWrapper {
+  text-align: left;
+  border-radius: 4px 4px 0 0;
+  box-shadow: 0px 4px 4px -4px rgba(0, 0, 0, 0.25);
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  z-index: 1011;
+  background-color: white;
+}
+
+.Header.Title {
+  font-size: 1.25rem;
+  font-family: 'Poppins', sans-serif;
+  color: black;
+  font-weight: 600;
+  opacity: 0.75;
+  text-align: bottom;
+  margin: 0;
+}
+
+.InfoCard.Text {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  color: #2d2d2d;
+}
+
+.InfoCard.FooterLink {
+  text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+}
+
+.InfoCard.WordMark {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: 1.5rem;
+  margin-left: 1rem;
+}
+
+.InfoCard.Footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: auto;
+}
+
+.LoadingList.LeftContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+
+.LoadingList.RightContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+}
+
+.LoadingList.LogoOutline {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+}
+
+.LoadingList.NameOutline {
+  height: 22px;
+  width: 78px;
+  border-radius: 8px;
+}
+
+.LoadingList.DateOutline {
+  width: 96px;
+  height: 17px;
+  border-radius: 8px;
+}
+
+.LoadingList.FirstMessage {
+  width: 355px;
+  height: 60px;
+  border-radius: 8px;
+}
+
+.LoadingList.SecondMessage {
+  width: 155px;
+  height: 60px;
+  border-radius: 8px;
+}
+
+.LoadingText.LoadingCircleContainer {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 5px;
+}
+
+.MessageBubble.TextWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  hyphens: auto;
+  padding: 3px 0 3px 50px;
+}
+
+.MessageBubble.MessageText {
+  color: #060028;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.25;
+  word-break: break-word;
+  text-align: start;
+  padding-left: 4px;
+}
+
+.MessageInput.StyledInput {
+  height: 2rem !important;
+  padding: 3px 0px 3px 10px;
+  display: flex;
+  margin: 1rem 0.5rem 1rem 0.5rem;
+  margin-top: auto;
+  border-radius: 6px;
+  border: none;
+  outline: none;
+  color: #333333;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  box-shadow: rgb(0 0 0 / 25%) 0px 0px 4px;
+}
+
+.MessageInput.StyledInput::placeholder {
+  color: #333c4f;
+}
+
+.MessageList.List {
+  display: flex;
+  flex-direction: column-reverse;
+  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  padding-bottom: 0;
+  box-sizing: border-box;
+}
+
+.MessagesBucket.Container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1rem;
+}
+
+.MessagesBucket.MessagePosition {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 10px;
+  align-self: flex-start;
+}
+
+.MessagesBucket.MessagePosition:first-of-type {
+  padding-bottom: 4px;
+}
+
+.MessagesBucket.MessageHeader {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: -18px;
+}
+
+.MessagesBucket.SentByInfo {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: -18px;
+}
+
+.MessagesBucket.MessageTime {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  margin-left: 8px;
+  color: rgb(6, 0, 40, 0.4);
+  transform: translateY(2px);
+}
+
+.MessagesBucket.FlexColReverseContainer {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.NewConversation.NewMessage {
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  background-color: white;
+  box-shadow: 0px -4px 4px -5px rgba(0, 0, 0, 0.25);
+  gap: 20px;
+  padding: 0 10px 0 10px;
+}
+
+.NewConversation.Input {
+  display: flex;
+  flex-grow: 1;
+  background-color: white;
+  border-radius: 4px;
+  display: flex;
+  align-self: stretch;
+  outline: none;
+  border: none;
+  padding: 5px 10px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 1rem;
+  height: 1.5rem;
+}
+
+.NewConversation.Button {
+  padding: 8px 12px;
+  border: 1px solid rgba(55, 41, 125, 0.5);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-self: stretch;
+  justify-content: center;
+  font-size: 12px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 15px;
+  background: #5203fc;
+  font-size: 14px;
+  color: white;
+  min-height: 1.5rem;
+  transition: all 0.1s ease-in-out;
+}
+
+.NewConversation.Button:hover {
+  cursor: pointer;
+  filter: brightness(1.1);
+}
+
+.NewConversation.Form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin-top: 1rem;
+  padding-top: 1.5rem;
+}
+
+.NewConversation.ErrorMessage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: red;
+  font-size: 0.75rem;
+  opacity: 0.8;
 }
