--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -172,6 +172,17 @@
   display: flex;
 }
 
+.AddressInfo.TextContainer {
+  margin-left: 1rem;
+  font-size: 16px;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+
 .ConversationList.List {
   display: flex;
   flex-direction: column;
@@ -322,6 +333,52 @@
   border-bottom: 1px solid #e4e4e4;
 }
 
+.InfoCard.Button {
+  padding: 8px 12px;
+  border: 1px solid rgba(55, 41, 125, 0.5);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-self: stretch;
+  justify-content: center;
+  font-size: 12px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 15px;
+  background: #5203fc;
+  font-size: 14px;
+  color: white;
+  transition: all 0.1s ease-in-out;
+}
+.InfoCard.Button.Disabled {
+  padding: 8px 12px;
+  border: 1px solid rgba(55, 41, 125, 0.5);
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-self: stretch;
+  justify-content: center;
+  font-size: 12px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 15px;
+  background: #5203fc;
+  font-size: 14px;
+  color: white;
+  filter: brightness(150%);
+}
+
+.InfoCard.Button:hover {
+  cursor: pointer;
+  filter: brightness(1.1);
+}
+
 .LoadingList.LeftContainer {
   display: flex;
   flex-direction: column;
@@ -338,30 +395,75 @@
   border-radius: 50%;
   height: 40px;
   width: 40px;
+  background-color: #777;
+  opacity: 0.2;
+  animation: RelayLoadingListSlide 1500ms ease-in-out infinite;
 }
 
 .LoadingList.NameOutline {
   height: 22px;
   width: 78px;
   border-radius: 8px;
+  background-color: #777;
+  opacity: 0.2;
+  animation: RelayLoadingListSlide 1500ms ease-in-out infinite;
 }
 
 .LoadingList.DateOutline {
   width: 96px;
   height: 17px;
   border-radius: 8px;
+  background-color: #777;
+  opacity: 0.2;
+  animation: RelayLoadingListSlide 1500ms ease-in-out infinite;
 }
 
 .LoadingList.FirstMessage {
   width: 355px;
   height: 60px;
   border-radius: 8px;
+  background-color: #777;
+  opacity: 0.2;
+  animation: RelayLoadingListSlide 1500ms ease-in-out infinite;
 }
 
 .LoadingList.SecondMessage {
   width: 155px;
   height: 60px;
   border-radius: 8px;
+  background-color: #777;
+  opacity: 0.2;
+  animation: RelayLoadingListSlide 1500ms ease-in-out infinite;
+}
+
+.LoadingList.MainContainer {
+  display: flex;
+  flex-direction: column-reverse;
+  overflow: hidden;
+  gap: 0.75rem;
+  width: 100%;
+  z-index: 10;
+  max-height: 345px;
+  padding: 12px;
+}
+
+.LoadingList.LeftUserInfo {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+}
+
+.LoadingList.RightUserInfo {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 13px;
+}
+
+.LoadingList.LeftMessageContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
 }
 
 .LoadingText.LoadingCircleContainer {
@@ -369,6 +471,48 @@
   align-items: center;
   gap: 5px;
   padding: 5px;
+}
+
+.LoadingText.LoadingCircle {
+  color: white;
+  height: 5px;
+  width: 5px;
+  background: #c3c2c2;
+  border-radius: 50%;
+  animation: pulse 1500ms ease-in-out infinite;
+}
+.LoadingText.LoadingCircl2 {
+  color: white;
+  height: 5px;
+  width: 5px;
+  background: #c3c2c2;
+  border-radius: 50%;
+  animation: RelayLoadingCirclePulse2 1500ms ease-in-out infinite;
+}
+.LoadingText.LoadingCircl3 {
+  color: white;
+  height: 5px;
+  width: 5px;
+  background: #c3c2c2;
+  border-radius: 50%;
+  animation: RelayLoadingCirclePulse3 1500ms ease-in-out infinite;
+}
+
+.LoadingList.RightMessageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.LoadingSpinnerContainer {
+  animation: relayReceiverSpin 1500ms linear infinite;
+  width: max-content;
+  height: max-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  border-radius: 50%;
 }
 
 .MessageBubble.TextWrapper {
@@ -390,6 +534,30 @@
   word-break: break-word;
   text-align: start;
   padding-left: 4px;
+}
+
+.MessageBucket.SentByInfo {
+  display: flex;
+}
+
+.MessagesBucket.SenderName.black-false.white-false {
+  font-weight: bold;
+  font-size: 14px;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  padding: 3px 6px;
+  background-color: #f1f2fd;
+  color: #6e6b99;
+  border-radius: 99rem;
+}
+
+.MessagesBucket.SenderName.black-true.white-true {
+  font-weight: bold;
+  font-size: 14px;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
+  padding: 3px 6px;
+  background-color: white;
+  color: black;
+  border-radius: 99rem;
 }
 
 .MessageInput.StyledInput {
@@ -451,8 +619,6 @@
 
 .MessagesBucket.SentByInfo {
   display: flex;
-  align-items: flex-start;
-  margin-bottom: -18px;
 }
 
 .MessagesBucket.MessageTime {
@@ -541,4 +707,77 @@
   color: red;
   font-size: 0.75rem;
   opacity: 0.8;
+}
+
+@keyframes RelayLoadingListSlide {
+  0% {
+    /* background-position: left 100% bottom 50%; */
+    background-color: #777;
+  }
+  40% {
+    /* background-position: right 100% bottom 50%; */
+    background-color: #cfcccc;
+  }
+  60% {
+    /* background-position: right 100% bottom 50%; */
+    background-color: #cfcccc;
+  }
+  100% {
+    /* background-position: right 100% bottom 50%; */
+    background-color: #777;
+  }
+}
+
+@keyframes relayReceiverSpin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes RelayLoadingCirclePulse1 {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes RelayLoadingCirclePulse2 {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes RelayLoadingCirclePulse3 {
+  0% {
+    transform: scale(0);
+  }
+  25% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
