--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -192,7 +192,6 @@
   box-shadow: 0px 4px 4px -4px rgba(0, 0, 0, 0.25);
   padding: 15px 10px;
   cursor: pointer;
-  width: 100%;
   background-color: transparent;
   transition: background-color 300ms ease-in-out;
 }
@@ -207,13 +206,28 @@
   font-size: 1rem;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   gap: 4px;
+}
+
+.ConversationListItem.Time {
+  color: #939292;
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  justify-content: start;
+  white-space: nowrap;
+  font-size: 0.8rem;
 }
 
 .ConversationListItem.Title {
   color: black;
   font-weight: bold;
   text-align: start;
+  width: 100%;
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .ConversationListItem.Subtitle {
