Footer has been adjusted to meet issue specs

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -274,21 +274,22 @@
   text-decoration: none;
   cursor: pointer;
   color: inherit;
+  display: flex;
+  align-items: center;
 }
 
 .InfoCard.WordMark {
   display: flex;
   flex-direction: row;
   align-items: center;
-  font-size: 1.5rem;
-  margin-left: 1rem;
+  font-size: 1.2rem;
+  font-weight: 400;
 }
 
 .InfoCard.Footer {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: auto;
 }
 
 .InfoCard.FullMiddleSection {
