--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -188,6 +188,7 @@
 .ConversationListItem.ListItem {
   display: flex;
   align-items: center;
+  box-sizing: border-box;
   gap: 10px;
   box-shadow: 0px 4px 4px -4px rgba(0, 0, 0, 0.25);
   padding: 15px 10px;
