--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,4 @@
-.RelayReceiver .Launcher.Fixed {
+.Launcher.Fixed {
   position: fixed;
   bottom: 0;
   right: 0;
@@ -7,7 +7,7 @@
   margin: 1.5rem;
 }
 
-.RelayReceiver .Launcher.Container {
+.Launcher.Container {
   margin: 0;
   padding: 0;
   display: flex;
@@ -15,7 +15,7 @@
   align-items: center;
 }
 
-.RelayReceiver .Launcher.LaunchButton {
+.Launcher.LaunchButton {
   background: white;
   border: none;
   border-radius: 50%;
@@ -27,11 +27,11 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.45);
 }
 
-.RelayReceiver .Launcher.LaunchButton:hover {
+.Launcher.LaunchButton:hover {
   cursor: pointer;
 }
 
-.RelayReceiver .Launcher.AvatarHoverDetails {
+.Launcher.AvatarHoverDetails {
   position: absolute;
   right: -0.5rem;
   top: -0.5rem;
@@ -46,13 +46,13 @@
   cursor: pointer;
 }
 
-.RelayReceiver .RelayReceiver .Launcher.AvatarContainer {
+.Launcher.AvatarContainer {
   position: relative;
   cursor: pointer;
   margin-bottom: 0.75rem;
 }
 
-.RelayReceiver .Launcher.AvatarContainer:hover > .Launcher.AvatarHoverDetails {
+.Launcher.AvatarContainer:hover > .Launcher.AvatarHoverDetails {
   display: block;
 }
 
