Fix timestamp width bug

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -220,6 +220,7 @@
 .ConversationListItem.ContentContainer {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .ConversationListItem.Time {
