--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -81,12 +81,6 @@
   border-radius: 50%;
 }
 
-.Window.Fixed {
-  position: fixed;
-  bottom: 0rem;
-  right: 88px;
-}
-
 .Window.Container {
   width: 400px;
   height: 500px;
@@ -95,6 +89,13 @@
   flex-direction: column;
   border-radius: 4px;
   box-shadow: rgb(0 0 0 / 25%) 0px 0px 4px;
+}
+
+@media (max-width: 400px) {
+  .Window.Container {
+    width: 100vw;
+    height: 100vh;
+  }
 }
 
 .RelayReceiver .AddressInfo.Container {
@@ -735,6 +736,15 @@
 
 .Intercom.Fixed.position-left {
   left: 88px;
+}
+
+@media (max-width: 400px) {
+  .Intercom.Fixed.Intercom.Fixed.position-left {
+    left: 0;
+  }
+  .Intercom.Fixed.Intercom.Fixed.position-right {
+    right: 0;
+  }
 }
 
 .RelayReceiver .Modal.Overlay {
