--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -640,7 +640,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  flex-grow:P 1;
+  flex-grow: 1;
   background-color: white;
   box-shadow: 0px -4px 4px -5px rgba(0, 0, 0, 0.25);
   gap: 20px;
