Add groups and multi-identity support.
* The biggest technical change is essentially parameterizing most XMTP
  functions with a client address. Paired with mult-client support in
  the xmtp-worker, we now mostly support multiple XMTP clients. Specific
  multi-client features will necessitate further changes, but the
  foundation is now in place.
* Added group support.
* TODO: join group request, leave group action. These should be minor
  changes.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -296,7 +296,7 @@
   background-color: white;
 }
 
-.RelayReceiver .HeaderWrapper .MenuIcon:hover {
+.RelayReceiver .MenuIcon:hover {
   stroke-width: 2;
 }
 
@@ -720,6 +720,17 @@
   position: absolute;
   top: 0;
   right: 0;
+  padding: 0;
+  box-shadow: none;
+  opacity: 0.4;
+  background: none;
+  border: none;
+}
+
+.RelayReceiver .NewConversationInput.NewGroupSpinner {
+  position: absolute;
+  top: 12px;
+  right: 12px;
   padding: 0;
   box-shadow: none;
   opacity: 0.4;
