There is now a new window that will link to your profile and a copy link to copy the url when someone hasn't signed up for the xmtp network

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -317,6 +317,14 @@
   color: #2d2d2d;
 }
 
+.RelayReceiver .InfoCard.Text .RelayLink {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: blue;
+  cursor: pointer;
+}
+
 .RelayReceiver .InfoCard.FooterLink {
   text-decoration: none;
   cursor: pointer;
