--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,6 +2,17 @@
   color: black;
 }
 
+.Iframe {
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  height: 43.75rem;
+  width: 22.5rem;
+  box-shadow: 0px 4px 32px rgba(16, 24, 40, 0.12);
+  border-radius: 14px;
+  border: none;
+}
+
 .Launcher.Fixed {
   position: fixed;
   bottom: 0;
